[package]
name = "hyperion-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bevy = { workspace = true }
hyperion = { workspace = true }
hyperion-inventory = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
valence_protocol = { workspace = true }

[lints]
workspace = true
