[package]
name = "rust-mc-bot"
version.workspace = true
authors = [
    "Eoghanmc22 <eoghanmc@icloud.com>",
    "Andrew Gazelka <andrew.gazelka@gmail.com>",
]
edition.workspace = true
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow.workspace = true
libdeflater.workspace = true
mio.workspace = true
num_cpus.workspace = true
rand.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
envy = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
